fixing alignment

--- a/src/styles/style.css
+++ b/src/styles/style.css
@@ -3,7 +3,6 @@ html, body {
     height: 100%;
     margin: 0;
     padding: 0;
-    overflow-y: auto;
 }
 
 p {
@@ -32,6 +31,8 @@ p {
     padding-top: 10rem;
 }
 
+/*content container for inventory.html page*/
+
 .page-title {
     text-align: center;
     position: fixed;
@@ -43,6 +44,17 @@ p {
 #title-and-search-container {
     display: flex;
     flex-direction: row;
+    justify-content: space-evenly;
+}
+
+#search {
+    width: 100px;
+}
+#search-bar-container {
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+    align-items: center;
 }
 
 /* navigation bar */
